# baseer-core

./: .gitignore  pyproject.toml
baseer/: __init__.py  core.py  models.py
baseer/data/: ignore_list.txt  objects.txt
demo/: demo.ipynb
